day1/003/k8s/alb-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      nodeSelector:
        wsc2026/node: addon
      containers:
        - name: controller
          image: public.ecr.aws/eks/aws-load-balancer-controller:v2.11.0
          args:
            - --cluster-name=wsc2026-eks-cluster
            - --ingress-class=alb
            - --aws-region=ap-northeast-2
            - --aws-vpc-id=PLACEHOLDER_VPC_ID
